# terminal-app-skeleton

./: README.md  demo_ui_logger.py  demo_ui_simple.py  index.js  package.json  pyproject.toml
src/terminalapp/: __init__.py  agent_demo.py  cli.py  main.py
src/terminalapp/utils/: intro.py  logger.py  ui.py
