[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-app-skeleton"
version = "0.1.0"
description = "terminal-app-skeleton"
authors = []
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0.0",
    "pyfiglet>=1.0.2",
]

[project.scripts]
main = "terminalapp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
